change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "teguholica/bitcoinIDAPI",
+    "name": "teguholica/bitcoin-idapi",
     "description": "Bitcoin.co.id API",
     "authors": [
         {
